<resources>
    <string name="app_name">Group Project</string>
    <string name="button01">Button</string>
    <string name="button_in_first">Next Page</string>
    <string name="button_in_grid">Next Page</string>
    <string name="scrollText">The story of Android dates back to 2003 when Andy Rubin, Rich Miner, Nick Sears, and Chris White co-founded a start-up Android Inc. in Palo Alto, California. However, the company was later faced with the insufficiency of funds which brought Google into the picture. Google could sense the potential the product carried within and sealed a deal worth $50 Million to acquire Android in 2005. All the four Co-founders soon moved to the Googleplex to continue to develop the OS further under their new owners. The first public Android Beta Version 1.0 was finally published on 5th November 2007. Android, operating system for cellular telephones and tablet computers. Android began in 2003 as a project of the American technology company Android Inc. to develop an operating system for digital cameras. In 2004 the project changed to become an operating system for smartphones. Android Inc., was bought by the American search engine company Google Inc., in 2005. At Google, the Android team decided to base their project on Linux, an open source operating system for personal computers.On November 5, 2007, Google announced the founding of the Open Handset Alliance, a consortium of dozens of technology and mobile telephone companies, including Intel Corporation, Motorola, Inc., NVIDIA Corporation, Texas Instruments Incorporated, LG Electronics, Inc., Samsung Electronics, Sprint Nextel Corporation, and T-Mobile (Deutsche Telekom). The consortium was created in order to develop and promote Android as a free open source operating system with support for third-party applications. Android-based devices use wireless networks in order to take full advantage of features such as one-touch Google searches, Google Docs (e.g., word editors, spreadsheets), and Google Earth (satellite mapping software). Britannica Quiz Computers and Technology Quiz. The first cellular telephone to feature the new operating system was the T-Mobile G1, released on October 22, 2008. In 2012 Android became the most popular operating system for mobile devices, surpassing Apple’s iOS, and, as of 2020, about 75 percent of mobile devices run Android. History of AndroidThe story of Android dates back to 2003 when Andy Rubin, Rich Miner, Nick Sears, and Chris White co-founded a start-up Android Inc. in Palo Alto, California. However, the company was later faced with the insufficiency of funds which brought Google into the picture. Google could sense the potential the product carried within and sealed a deal worth $50 Million to acquire Android in 2005. All the four Co-founders soon moved to the Googleplex to continue to develop the OS further under their new owners. The first public Android Beta Version 1.0 was finally published on 5th November 2007. Android, operating system for cellular telephones and tablet computers. Android began in 2003 as a project of the American technology company Android Inc., to develop an operating system for digital cameras. In 2004 the project changed to become an operating system for smartphones. Android Inc., was bought by the American search engine company Google Inc., in 2005. At Google, the Android team decided to base their project on Linux, an open source operating system for personal computers.On November 5, 2007, Google announced the founding of the Open Handset Alliance, a consortium of dozens of technology and mobile telephone companies, including Intel Corporation, Motorola, Inc., NVIDIA Corporation, Texas Instruments Incorporated, LG Electronics, Inc., Samsung Electronics, Sprint Nextel Corporation, and T-Mobile (Deutsche Telekom). The consortium was created in order to develop and promote Android as a free open source operating system with support for third-party applications. Android-based devices use wireless networks in order to take full advantage of features such as one-touch Google searches, Google Docs (e.g., word editors, spreadsheets), and Google Earth (satellite mapping software). Britannica Quiz Computers and Technology Quiz. The first cellular telephone to feature the new operating system was the T-Mobile G1, released on October 22, 2008. In 2012 Android became the most popular operating system for mobile devices, surpassing Apple’s iOS, and, as of 2020, about 75 percent of mobile devices run Android.</string>
    <string name="col1">Name</string>
    <string name="col2">Roll</string>
    <string name="row1Name">Ashik-E-Elahi</string>
    <string name="row1Roll">223124</string>
    <string name="row2Name">Jannatul Joinal Ananna</string>
    <string name="row2Roll">223139</string>
    <string name="row3Name">Md. Alamgir Hossain</string>
    <string name="row3Roll">223134</string>
    <string name="row4Name">Md. Masfiqur Rahman</string>
    <string name="row4Roll">223143</string>
    <string name="row5Name">Rahul Sarker</string>
    <string name="row5Roll">223111</string>
    <string name="button3">Next Page</string>
    <string name="table_button">Next</string>
</resources>