<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText"
    android:stretchColumns="1">

    <TableRow
        android:background="@color/gray">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/col1"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/col2"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            />


    </TableRow>

    <!-- Table Data -->

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row1Name"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row1Roll"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            />


    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row2Name"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row2Roll"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            />


    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row3Name"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row3Roll"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            />


    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row4Name"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row4Roll"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            />


    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row5Name"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row5Roll"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            />


    </TableRow>

</TableLayout>
